--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -1,35 +1,33 @@
-name: Automated Bandit Tests
+# This workflow executes several linters on changed files based on languages used in your code base whenever
+# you push a code or open a pull request.
+#
+# You can adjust the behavior by modifying this file.
+# For more information, see:
+# https://github.com/github/super-linter
+name: Lint Code Base
 
 on:
   push:
-    paths:
-      - 'try.py'
-
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 jobs:
-  bandit:
+  run-lint:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          # Full git history is needed to get a proper list of changed files within `super-linter`
+          fetch-depth: 0
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.12.0
-
-    - name: Install Bandit
-      run: |
-        python -m pip install --upgrade pip
-        pip install bandit
-
-    - name: Run Bandit tests
-      run: bandit -r .
-
-    - name: Commit and push changes if tests pass
-      run: |
-        git config user.name "GitHub Actions"
-        git config user.email "actions@github.com"
-        git add .
-        git diff --quiet && git diff --staged --quiet || git commit -m "Automated commit: Bandit scan passed"
-        git push origin main
+      - name: Lint Code Base
+        uses: github/super-linter@v4
+        env:
+          VALIDATE_ALL_CODEBASE: false
+          VALIDATE_PYTHON_FLAKE8: false
+          VALIDATE_PYTHON_ISORT: false
+          VALIDATE_PYTHON_MYPY: false
+          VALIDATE_PYTHON_PYLINT: false
+          DEFAULT_BRANCH: "main"
+          GITHUB_TOKEN: ${{ secrets.ALLPERMS}}
