--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -1,9 +1,3 @@
-# This workflow executes several linters on changed files based on languages used in your code base whenever
-# you push a code or open a pull request.
-#
-# You can adjust the behavior by modifying this file.
-# For more information, see:
-# https://github.com/github/super-linter
 name: Lint Code Base
 
 on:
@@ -11,15 +5,20 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+
 jobs:
   run-lint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          # Full git history is needed to get a proper list of changed files within `super-linter`
-          fetch-depth: 0
+        uses: actions/checkout@v2
+
+      - name: Install Bandit
+        run: |
+          pip install bandit
+
+      - name: Run Bandit Security Testing
+        run: bandit -r .
 
       - name: Lint Code Base
         uses: github/super-linter@v4
@@ -30,4 +29,4 @@ jobs:
           VALIDATE_PYTHON_MYPY: false
           VALIDATE_PYTHON_PYLINT: false
           DEFAULT_BRANCH: "main"
-          GITHUB_TOKEN: ${{ secrets.ALLPERMS}}
+          GITHUB_TOKEN: ${{ secrets.ALLPERMS }}
