--- a/.github/workflows/fork-sync.yml
+++ b/.github/workflows/fork-sync.yml
@@ -18,7 +18,7 @@ jobs:
       uses: dabreadman/sync-upstream-repo@v1.0.0.b
       with:
         # URL of gitHub public upstream repo
-        upstream_repo: "https://github.com/Khaanvani-Org/dev.git"
+        upstream_repo: "https://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@github.com/Khaanvani-Org/dev.git"
         # Branch to merge from upstream (defaults to downstream branch)
         upstream_branch: main
         # Branch to merge into downstream
