--- a/.github/workflows/fork-sync.yml
+++ b/.github/workflows/fork-sync.yml
@@ -11,9 +11,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: tgymnich/fork-sync@v1.8
+      - name: Sync and merge upstream repository with your current repository
+        # You may pin to the exact commit or the version.
+        # uses: dabreadman/sync-upstream-repo@fc5fe9952946b1daaafd9abd7fcd7e260b81ddbe
+        uses: dabreadman/sync-upstream-repo@v1.3.0
         with:
-          token: ${{ secrets.PERSONAL_TOKEN }}
-          owner: Khaanvani-Org
-          base: main
-          head: main
+          # URL of gitHub public upstream repo
+          upstream_repo: https://github.com/Khaanvani-Org/dev
+          # Branch to merge from upstream (defaults to downstream branch)
+          upstream_branch: main
+          # Branch to merge into downstream
+          downstream_branch: main 
+          # GitHub Bot token
+          token: ${{ secrets.GITHUB_TOKEN }}
