--- a/.github/workflows/fork-sync.yml
+++ b/.github/workflows/fork-sync.yml
@@ -4,7 +4,10 @@ on:
   schedule:
     - cron: '*/30 * * * *' # every 30 minutes
   workflow_dispatch: # on button click
-
+  
+permissions:
+  contents: write
+  
 jobs:
   sync:
 
