--- a/.github/workflows/fork-sync.yml
+++ b/.github/workflows/fork-sync.yml
@@ -20,7 +20,7 @@ jobs:
         uses: dabreadman/sync-upstream-repo@v1.3.0
         with:
           # URL of gitHub public upstream repo
-          upstream_repo: https://github.com/Khaanvani-Org/dev
+          upstream_repo: https://github.com/Khaanvani-Org/dev.git
           # Branch to merge from upstream (defaults to downstream branch)
           upstream_branch: main
           # Branch to merge into downstream
