--- a/.github/workflows/fork-sync.yml
+++ b/.github/workflows/fork-sync.yml
@@ -3,7 +3,10 @@ name: Sync Dev to Test
 on:
   schedule:
     - cron: '*/5 * * * *' # every 5 minutes
-  workflow_dispatch: # manually triggered workflow
+  workflow_run:
+    workflows: ["bandit", "lintr"]
+    types:
+      - completed
 
 permissions:
   contents: write
@@ -12,6 +15,12 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
+      - name: Check if previous workflows are successful
+        run: |
+          if [ "${{ github.event.workflow_run.conclusion }}" != "success" ]; then
+            echo "One of the previous workflows failed, exiting."
+            exit 1
+          fi
       - name: Sync and merge upstream repository with the test repository
         uses: dabreadman/sync-upstream-repo@v1.3.0
         with:
