--- a/.github/workflows/fork-sync.yml
+++ b/.github/workflows/fork-sync.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Check if previous workflows are successful
         run: |
           if [ "${{ github.event.workflow_run.conclusion }}" != "success" ]; then
-            echo "One of the previous workflows failed, exiting."
+            echo "Workflow '${{ github.event.workflow_run.name }}' failed, exiting."
             exit 1
           fi
       - name: Sync and merge upstream repository with the test repository
