--- a/.github/workflows/fork-sync.yml
+++ b/.github/workflows/fork-sync.yml
@@ -26,4 +26,4 @@ jobs:
           # Branch to merge into downstream
           downstream_branch: main 
           # GitHub Bot token
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PERSONAL_TOKEN }}
