--- a/.github/workflows/fork-sync.yml
+++ b/.github/workflows/fork-sync.yml
@@ -2,28 +2,21 @@ name: Sync Fork
 
 on:
   schedule:
-    - cron: '*/5 * * * *' 
-  workflow_dispatch: # on button click
+    - cron: "*/30 * * * *"
+  workflow_dispatch
   
 permissions:
   contents: write
   
 jobs:
   sync:
-
     runs-on: ubuntu-latest
 
     steps:
       - name: Sync and merge upstream repository with your current repository
-        # You may pin to the exact commit or the version.
-        # uses: dabreadman/sync-upstream-repo@fc5fe9952946b1daaafd9abd7fcd7e260b81ddbe
         uses: dabreadman/sync-upstream-repo@v1.3.0
         with:
-          # URL of gitHub public upstream repo
           upstream_repo: https://github.com/Khaanvani-Org/dev.git
-          # Branch to merge from upstream (defaults to downstream branch)
           upstream_branch: main
-          # Branch to merge into downstream
-          downstream_branch: main 
-          # GitHub Bot token
-          token: ${{ secrets.PERSONAL_TOKEN }}
+          downstream_branch: main
+          token: ${{ secrets.GITHUB_TOKEN }}
