--- a/.github/workflows/fork-sync.yml
+++ b/.github/workflows/fork-sync.yml
@@ -2,12 +2,12 @@ name: Sync Fork
 
 on:
   schedule:
-    - cron: "*/30 * * * *"
-  workflow_dispatch
-  
+    - cron: "*/5 * * * *"
+  workflow_dispatch:
+
 permissions:
   contents: write
-  
+
 jobs:
   sync:
     runs-on: ubuntu-latest
@@ -19,4 +19,4 @@ jobs:
           upstream_repo: https://github.com/Khaanvani-Org/dev.git
           upstream_branch: main
           downstream_branch: main
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
