--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,27 +3,25 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main
-    paths:
-      - Dockerfile.dev  # Specify the path to your Dockerfile
+      - main  # Define the branch where you want to trigger this workflow
 
 jobs:
-  build_and_push:
+  build:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push Docker image
-      env:
-        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      run: |
-        docker buildx create --use
-        docker buildx build -t python :latest -f Dockerfile.dev
-        docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-        docker push python :latest
+    - name: Build Docker Image
+      run: docker build -t pd-chatbot:v0 .
+      working-directory: dev/Dockerfile.dev
+
+    - name: Push Docker Image
+      run: docker push pd-chatbot:v0
