--- a/.github/workflows/fork-sync.yml
+++ b/.github/workflows/fork-sync.yml
@@ -2,11 +2,7 @@ name: Sync Fork
 
 on:
   schedule:
-    - cron: "*/5 * * * *" # This schedule will run the workflow every 5 minutes
-  workflow_run:
-    workflows: ["bandit", "wapiti", "linter"]
-    types:
-      - completed
+    - cron: "*/5 * * * *"
   workflow_dispatch:
 
 permissions:
@@ -17,12 +13,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check if all checks passed
-        id: checks
-        run: echo ::set-output name=checks::true
+      - name: Set Environment Variable
+        run: echo "CHECKS=true" >> $GITHUB_ENV
 
       - name: Sync and merge upstream repository with your current repository
-        if: steps.checks.outputs.checks == 'true'
         uses: dabreadman/sync-upstream-repo@v1.3.0
         with:
           upstream_repo: https://github.com/Khaanvani-Org/dev.git
