--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Build Docker Image
       run: docker build -t pd-chatbot:v0 .
-      working-directory: dev/Dockerfile.dev
+      working-directory: Dockerfile.dev
 
     - name: Push Docker Image
       run: docker push pd-chatbot:v0
