--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,7 +20,7 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build Docker Image
-      run: docker build -t pd-chatbot:v0 .
-      working-directory: ./Dockerfile
+      run: docker build -t pd-chatbot:v0 . --file Dockerfile
+      
     - name: Push Docker Image
       run: docker push pd-chatbot:v0
