--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,21 +6,17 @@ on:
       - main  # Define the branch where you want to trigger this workflow
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build Docker image
+        run: docker build -t pd-chatbot:v0 .
 
-    - name: Build Docker Image
-      run: docker build -t pd-chatbot:v0 . --file Dockerfile
-      
-    - name: Push Docker Image
-      run: docker push pd-chatbot:v0
+      - name: Push Docker image
+        run: |
+          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+          docker push pd-chatbot:v0
