--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -1,21 +1,34 @@
-name: Sync Fork if Checks Pass
+name: Security Scans and Sync
 
 on:
-  workflow_run:
-    workflows: ["Bandit", "Wapiti"]
-    types:
-      - completed
+  push:
+    branches: [main]
 
 jobs:
-  sync:
+  security_and_sync:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check Bandit and Wapiti Results
-        run: echo "CHECKS=true" >> $GITHUB_ENV
-        if: ${{ needs.Bandit.result == 'success' && needs.Wapiti.result == 'success' }}
-        
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Install Bandit
+        run: |
+          pip install bandit
+          bandit -r .
+        continue-on-error: true
+
+      - name: Install Wapiti
+        if: always()
+        needs: bandit
+        run: |
+          sudo apt-get -y install wapiti
+          wapiti -u https://khaanvaani.streamlit.app/
+        continue-on-error: true
+
       - name: Sync Fork
+        if: always()
+        needs: wapiti
         uses: dabreadman/sync-upstream-repo@v1.3.0
         with:
           upstream_repo: https://github.com/Khaanvani-Org/dev.git
