--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -1,15 +1,12 @@
-name: Security Scans and Flow Sync
+name: Security Scans and Sync
 
 on:
   push:
-    branches: [main]
-  workflow_run:
-    workflows: ["Bandit", "Wapiti"]
-    types:
-      - completed
+    branches:
+      - main
 
 jobs:
-  security_and_sync:
+  bandit_scan:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,19 +16,23 @@ jobs:
       - name: Install Bandit
         run: |
           pip install bandit
-     #      bandit -r .
-        continue-on-error: false
+          bandit -r .
 
+  wapiti_scan:
+    runs-on: ubuntu-latest
+    needs: bandit_scan
+
+    steps:
       - name: Install Wapiti
         run: |
           sudo apt-get -y install wapiti
           wapiti -u https://khaanvaani.streamlit.app/
-        continue-on-error: true
 
-      - name: Check Bandit and Wapiti Results
-        run: echo "CHECKS=true" >> $GITHUB_ENV
-        if: ${{ success() }}
+  sync_fork:
+    runs-on: ubuntu-latest
+    needs: [bandit_scan, wapiti_scan]
 
+    steps:
       - name: Sync Fork
         uses: dabreadman/sync-upstream-repo@v1.3.0
         with:
@@ -39,4 +40,3 @@ jobs:
           upstream_branch: main
           downstream_branch: main
           token: ${{ secrets.GITHUB_TOKEN }}
-        if: ${{ success() }}
