--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -28,9 +28,30 @@ jobs:
           sudo apt-get -y install wapiti
           wapiti -u https://khaanvaani.streamlit.app/
 
+  selenium_test:
+    runs-on: ubuntu-latest
+    needs: wapiti_scan
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.12.0  # Replace with your Python version
+
+      - name: Install Dependencies
+        run: |
+          pip install selenium
+          # Add any other necessary dependencies with "pip install" as well
+
+      - name: Run Selenium Tests
+        run: python test.py
+
   sync_fork:
     runs-on: ubuntu-latest
-    needs: [bandit_scan, wapiti_scan]
+    needs: [bandit_scan, wapiti_scan, selenium_test]
 
     steps:
       - name: Sync Fork
