--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -31,7 +31,7 @@ jobs:
 
   sync_fork:
     runs-on: ubuntu-latest
-    needs: [bandit_scan, wapiti_scan, selenium_test]
+    needs: [bandit_scan, wapiti_scan]
 
     steps:
       - name: Sync Fork
