--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -35,19 +35,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: [bandit_scan, wapiti_scan]
     steps:
-      - name: Set Git identity
-        run: |
-          git config --global user.email "eng21ct0039@dsu.edu.in"
-          git config --global user.name "Sukriti"
-
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Sync Fork
-        uses: dabreadman/sync-upstream-repo@v1.3.0
-        with:
-          upstream_repo: https://github.com/Khaanvani-Org/dev.git
-          upstream_branch: main
-          downstream_repo: https://github.com/Khaanvani-Org/test.git
-          downstream_branch: main
-          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Sync changes to test repo
+        run: |
+          git remote add test-repo https://github.com/YourUsername/test.git
+          git push test-repo main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
