--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,9 +1,9 @@
 name: Code Coverage
 
-on:
-  push:
+#on:
+#  push:
     branches:
-      - main  # Replace with the branch you want to monitor
+  #    - main  # Replace with the branch you want to monitor
 
 jobs:
   test:
