--- a/.github/workflows/pushing.yml
+++ b/.github/workflows/pushing.yml
@@ -12,8 +12,8 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Pushes test file
-      uses: dmnemec/copy_file_to_another_repo_action@main
+    - name: Push a file to another repository
+      uses: dmnemec/copy_file_to_another_repo_action@v1.1.1
       env:
         API_TOKEN: ${{ secrets.COPYREPO_KHAANVANI2 }} # Use the correct environment variable name
       with:
