--- a/.github/workflows/pushing.yml
+++ b/.github/workflows/pushing.yml
@@ -8,6 +8,10 @@ on:
 jobs:
   copy-file:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      packages: write
+      pages: write 
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -15,7 +19,7 @@ jobs:
     - name: Push a file to another repository
       uses: dmnemec/copy_file_to_another_repo_action@v1.1.1
       env:
-       API_TOKEN_GITHUB: ${{ secrets.ALLPERMS }} # Use the correct environment variable name
+       API_TOKEN_GITHUB: ${{ secrets.PAT_TOKEN }} # Use the correct environment variable name
       with:
         source_file: 'try.py'
         destination_repo: 'Khaanvani-Org/test'
