--- a/.github/workflows/pushing.yml
+++ b/.github/workflows/pushing.yml
@@ -25,4 +25,4 @@ jobs:
         destination_repo: 'Khaanvani-Org/test'
         user_email: 'eng21ct0039@dsu.edu.in'
         user_name: 's-sukriti'
-        commit_message: 'A jj message for the commit'
+        commit_message: 'hopefully 49 commited'
