--- a/.github/workflows/pushing.yml
+++ b/.github/workflows/pushing.yml
@@ -30,9 +30,27 @@ jobs:
         run: |
           sudo apt-get -y install wapiti
           wapiti -u https://khaanvaani.streamlit.app/
-  copy-file:
+
+  selenium_test:
     runs-on: ubuntu-latest
     needs: [bandit_scan, wapiti_scan]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.12.0  # Replace with your Python version
+      - name: Install Dependencies
+        run: |
+         pip install selenium
+  # Add any other necessary dependencies with "pip install" as we
+      - name: Run Selenium Tests
+        run: python try.py
+          
+  copy-file:
+    runs-on: ubuntu-latest
+    needs: [bandit_scan, wapiti_scan,selenium_test]
     permissions:
       contents: write
       packages: write
