--- a/.github/workflows/pushing.yml
+++ b/.github/workflows/pushing.yml
@@ -59,7 +59,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Push try to another repository
+    - name: try.py
       uses: dmnemec/copy_file_to_another_repo_action@v1.1.1
       env:
        API_TOKEN_GITHUB: ${{ secrets.PAT_TOKEN }} # Use the correct environment variable name
@@ -68,7 +68,8 @@ jobs:
         destination_repo: 'Khaanvani-Org/test'
         user_email: 'eng21ct0039@dsu.edu.in'
         user_name: 's-sukriti'
-    - name: Push readme to another repository
+        
+    - name: readme.md
       uses: dmnemec/copy_file_to_another_repo_action@v1.1.1
       env:
        API_TOKEN_GITHUB: ${{ secrets.PAT_TOKEN }} # Use the correct environment variable name
@@ -77,4 +78,73 @@ jobs:
         destination_repo: 'Khaanvani-Org/test'
         user_email: 'eng21ct0039@dsu.edu.in'
         user_name: 's-sukriti'
-    
+        
+    - name: k8s
+      uses: dmnemec/copy_file_to_another_repo_action@v1.1.1
+      env:
+       API_TOKEN_GITHUB: ${{ secrets.PAT_TOKEN }} # Use the correct environment variable name
+      with:
+        source_file: 'k8s/'
+        destination_repo: 'Khaanvani-Org/test'
+        user_email: 'eng21ct0039@dsu.edu.in'
+        user_name: 's-sukriti'
+
+    - name: .env
+      uses: dmnemec/copy_file_to_another_repo_action@v1.1.1
+      env:
+       API_TOKEN_GITHUB: ${{ secrets.PAT_TOKEN }} # Use the correct environment variable name
+      with:
+        source_file: '.env'
+        destination_repo: 'Khaanvani-Org/test'
+        user_email: 'eng21ct0039@dsu.edu.in'
+        user_name: 's-sukriti'
+
+    - name: Dockerfile
+      uses: dmnemec/copy_file_to_another_repo_action@v1.1.1
+      env:
+       API_TOKEN_GITHUB: ${{ secrets.PAT_TOKEN }} # Use the correct environment variable name
+      with:
+        source_file: 'Dockerfile'
+        destination_repo: 'Khaanvani-Org/test'
+        user_email: 'eng21ct0039@dsu.edu.in'
+        user_name: 's-sukriti'
+
+    - name: Langchain_Pinecone_Indexing_.ipynb
+      uses: dmnemec/copy_file_to_another_repo_action@v1.1.1
+      env:
+       API_TOKEN_GITHUB: ${{ secrets.PAT_TOKEN }} # Use the correct environment variable name
+      with:
+        source_file: 'Langchain_Pinecone_Indexing_.ipynb'
+        destination_repo: 'Khaanvani-Org/test'
+        user_email: 'eng21ct0039@dsu.edu.in'
+        user_name: 's-sukriti'
+
+    - name: main.py
+      uses: dmnemec/copy_file_to_another_repo_action@v1.1.1
+      env:
+       API_TOKEN_GITHUB: ${{ secrets.PAT_TOKEN }} # Use the correct environment variable name
+      with:
+        source_file: 'main.py'
+        destination_repo: 'Khaanvani-Org/test'
+        user_email: 'eng21ct0039@dsu.edu.in'
+        user_name: 's-sukriti'    
+
+    - name: requirements.txt
+      uses: dmnemec/copy_file_to_another_repo_action@v1.1.1
+      env:
+       API_TOKEN_GITHUB: ${{ secrets.PAT_TOKEN }} # Use the correct environment variable name
+      with:
+        source_file: 'requirements.txt'
+        destination_repo: 'Khaanvani-Org/test'
+        user_email: 'eng21ct0039@dsu.edu.in'
+        user_name: 's-sukriti'   
+
+    - name: utils.py
+      uses: dmnemec/copy_file_to_another_repo_action@v1.1.1
+      env:
+       API_TOKEN_GITHUB: ${{ secrets.PAT_TOKEN }} # Use the correct environment variable name
+      with:
+        source_file: 'utils.py'
+        destination_repo: 'Khaanvani-Org/test'
+        user_email: 'eng21ct0039@dsu.edu.in'
+        user_name: 's-sukriti'  
