--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,28 +1,28 @@
-# name: Build and Push Docker Image
+name: Build and Push Docker Image
 
-# on:
-#   push:
-#     branches:
-#       - main  # Define the branch where you want to trigger this workflow
+on:
+   push:
+     branches:
+       - main  # Define the branch where you want to trigger this workflow
 
-# jobs:
-#   build:
+jobs:
+   build:
     runs-on: ubuntu-latest
 
-#     steps:
-#     - name: Checkout code
-#       uses: actions/checkout@v2
+    steps:
+     - name: Checkout code
+       uses: actions/checkout@v2
 
-#     - name: Login to Docker Hub
-#       uses: docker/login-action@v1
-#       with:
-#         username: ${{ secrets.DOCKER_USERNAME }}
-#         password: ${{ secrets.DOCKER_PASSWORD }}
+     - name: Login to Docker Hub
+       uses: docker/login-action@v1
+       with:
+         username: ${{ secrets.DOCKER_USERNAME }}
+         password: ${{ secrets.DOCKER_PASSWORD }}
 
-#     - name: Build Docker Image
-#       run: docker build -t pd-chatbot:v0 . --file Dockerfile
+     - name: Build Docker Image
+       run: docker build -t pd-chatbot:v0 . --file Dockerfile
       
-#     - name: Push Docker Image
-#       run: |
-#         docker tag pd-chatbot:v0 vidushimodi/pd-chatbot:v0
-#         docker push vidushimodi/pd-chatbot:v0
+     - name: Push Docker Image
+       run: |
+         docker tag pd-chatbot:v0 vidushimodi/pd-chatbot:v0
+         docker push vidushimodi/pd-chatbot:v0
