--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -22,6 +22,13 @@ jobs:
       run: |
         pip install -r requirements.txt
 
+    - name: Install Veracode CLI
+      run: |
+        # Install the Veracode CLI
+        wget -O veracode.zip https://downloads.veracode.com/securityscan/cli/veracode-linux-cli-latest.zip
+        unzip -q veracode.zip
+        export PATH=$PATH:$(pwd)
+
     - name: Run Veracode Scan
       run: |
         # Perform any pre-scan setup here
