--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -1,33 +1,38 @@
-name: Veracode
+name: Veracode Scan
 
 on:
   push:
     branches:
-      - main  # Replace with the branch you want to monitor
+      - main
 
 jobs:
-  test:
+  veracode-scan:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: 3.8  # Replace with your Python version
+    - name: Setup Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
 
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt # Install your project's dependencies
-          pip install pytest-cov
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
 
-      - name: Run tests with coverage
-        run: |
-          pytest --cov=your_module tests/  # Replace "your_module" with the module to be tested
+    - name: Run Veracode Scan
+      run: |
+        # Perform any pre-scan setup here
 
-      - name: Upload code coverage to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+        # Example: Run Veracode scan command
+        veracode scan -options
+
+    - name: Upload results to Veracode
+      run: |
+        # Upload scan results to Veracode
+        
+    # Add additional steps as needed
+
+# Add workflow configuration for other types of scans, integrations, etc.
