--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -22,13 +22,18 @@ jobs:
       run: |
         pip install -r requirements.txt
 
+    - name: Install Veracode CLI
+      run: |
+        # Install Veracode CLI
+        curl -O https://downloads.veracode.com/securityscan/VeracodeJavaAPI.jar
+        export PATH=$PATH:$(pwd)
+        
     - name: Run Veracode Scan
       run: |
         # Perform any pre-scan setup here
-
         # Example: Run Veracode scan command
         veracode scan -options
-
+        
     - name: Upload results to Veracode
       run: |
         # Upload scan results to Veracode
